# shadow

./: .gitignore  Cargo.toml  LICENSE  README.md
.cspell/: custom-dictionary-workspace.txt
.github/workflows/: build.yml
certs/: rsa_4096_pri.key  rsa_4096_pub.key  shadow_ca.crt  shadow_ca.csr
shadow-client/: Cargo.toml  build.rs
shadow-client/src/: lib.rs  main.rs
shadow-client/src/misc/: embed.rs  mod.rs
shadow-client/src/network/: mod.rs  run.rs  server.rs  tls.rs
shadow-common/: Cargo.toml
shadow-common/src/: error.rs  lib.rs
shadow-common/src/client/: mod.rs  shim.rs  types.rs
shadow-common/src/misc/: mod.rs  sender.rs
shadow-common/src/server/: mod.rs
shadow-server/: Cargo.toml  README.md  build.rs
shadow-server/src/: lib.rs  main.rs
shadow-server/src/misc/: embed.rs  mod.rs
shadow-server/src/network/: glue.rs  mod.rs  run.rs  server.rs  tls.rs
shadow-server/src/web/: README.md  error.rs  handler.rs  mod.rs  run.rs
shadow-server/src/web/v1/: error.rs  handler.rs  mod.rs
shadow-server/src/web/v1/handler/: client.rs
shadow-server/src/web/v1/handler/client/: app.rs  display.rs  file.rs  mod.rs  power.rs  process.rs  query.rs
shadow-server/src/web/v1/handler/client/proxy/: mod.rs  run.rs  socks5.rs
shadow-server/src/web/v1/handler/server/: mod.rs  query.rs
shadow-server/src/web/v1/handler/server/proxy/: mod.rs
shadow-server/src/web/v1/handler_bak/: client.rs  server.rs
