[package]
name = "shadow-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "Shadow RAT's client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
remoc = { version = "0.13.0", features = ["full-codecs", "rmp-serde"] }
shadow-common = { path = "../shadow-common" }
tokio = { version = "1.37.0", features = ["full"] }
bincode = "1.3.3"
flexi_logger = "0.28.0"
log = "0.4.21"
sysinfo = "0.30.11"
uuid = "1.8.0"
system_shutdown = "4.0.1"
installed = "0.1.0"
