[package]
name = "shadow-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "Provide bridge between server and client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
remoc = { version = "0.13.0", features = ["full-codecs", "rmp-serde"] }
serde = { version = "1.0.198", features = ["derive"] }
sysinfo = "0.30.11"
uuid = "1.8.0"
thiserror = "1.0.59"
installed = "0.1.0"
