[package]
name = "shadow-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
remoc = { version = "0.13.0", features = ["full-codecs", "rmp-serde"] }
shadow-common = { path = "../shadow-common" }
tokio = { version = "1.37.0", features = ["full"] }
bincode = "1.3.3"
