[package]
name = "shadow-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "Shadow RAT's server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
remoc = { version = "0.13.0", features = ["full-codecs", "rmp-serde"] }
shadow-common = { path = "../shadow-common" }
tokio = { version = "1.37.0", features = ["full"] }
bincode = "1.3.3"
flexi_logger = { version = "0.28.0", features = ["async", "colors"] }
log = "0.4.21"
uuid = "1.8.0"
thiserror = "1.0.59"
warp = "0.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
strum = "0.26.2"
strum_macros = "0.26"
tokio-rustls = "0.26.0"
rustls-pemfile = "2.1.2"
rustls-pki-types = "1.7.0"
